# gmpy

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  INSTALL  MANIFEST.in  README  README.rst  SECURITY.md  TODO  build-wheels.conf  changes.txt  mac_build.txt  meson.build  msys2_build.txt  mutable_mpz.txt  pyproject.toml  setes.py  setup-legacy.py  setup.py  setup2.py  setup3.py  setup_msys.py  win_x64_sdk_build.txt  windows_build.txt
.github/workflows/: build_wheels.yml  build_wheels_apple_silicon.yml  build_wheels_legacy.yml  build_wheels_py27.yml  pip_install_gmpy2.yml
archive/: setup-legacy.py  setup_msys.py
branches/aleax-sandbox/: README  setup.py
branches/casevh-sandbox/: setup.py
branches/devel/: MANIFEST.in  setup.py  windows_build.txt
branches/gmpy_1_04_maint/: windows_build.txt
build.bat/: configure2.bat  make.bat
build.vc10/: gmpy.vcxproj  gmpy.vcxproj.filters  gmpy2.sln
build.vc10/gmpy2.python26/: gmpy2.python26.vcxproj  win32.debug .props  x64.debug.props  x64.release.props
build.vc10/gmpy2.python27/: gmpy2.python27.vcxproj  win32.debug .props  win32.release .props  x64.debug.props
build.vc10/gmpy2.python31/: gmpy2.python31.vcxproj  win32.release .props  x64.debug.props  x64.release.props
build.vc10/gmpy2.python32/: gmpy2.python32.vcxproj  win32.debug .props  win32.release .props  x64.debug.props  x64.release.props
build.vc11/: gmpy2.sln
build.vc11/gmpy2.python26/: gmpy2.python26.vcxproj
build.vc11/gmpy2.python27/: gmpy2.python27.vcxproj  x64.debug.props
build.vc11/gmpy2.python32/: gmpy2.python32.vcxproj
build.vc12/: gmpy2.sln
build.vc12/gmpy2.python26/: gmpy2.python26.vcxproj
build.vc12/gmpy2.python27/: gmpy2.python27.vcxproj
build.vc12/gmpy2.python32/: gmpy2.python32.vcxproj  gmpy2.python32.vcxproj.filters
build.vc12/gmpy2.python33/: gmpy2.python33.vcxproj  x64.release.props
build.vc12/gmpy2.python34/: gmpy2.python34.vcxproj
build.vc9/: gmpy.vcproj  gmpy2.sln
build.vc9/gmpy2.python26/: gmpy2.python26.vcproj
demo/: gmpy2_demo.c  parallel_powmod.py  setup.py
doc/: gmpydoc.txt  index.html
docs/: Makefile  advmpz.rst  conf.py  contexts.rst  conversion.rst  cython.rst  exceptions.rst  generic.rst  history.rst  index.rst  install.rst  intro.rst  make.bat  misc.rst  mpc.rst  mpfr.rst  mpq.rst  mpz.rst  overview.rst  tutorial.rst  win_build.rst
gmpy2/: __init__.pxd  __init__.py  gmpy2.h  gmpy2.pxd  vector.py
mingw64/: 32bit.bat  64bit-libs.bat  64bit.bat  MANIFEST.in  dll2lib.bat  gendef64.bat  msys2_64_shared.sh  msys2_64_static.sh  msys2_build.txt  setup-mingw64.py
mingw64/distutils/: cygwinccompiler.py
mingw64/include/: gmp.h  mpfr.h
mingw64/lib/: libmpc.la  libmpfr.la
mingw64/winlibs/: gmp.lib  mpc.lib  mpfr.lib
mingw64/winlibs-msvcrt/: gmp.h  gmp.lib
mingw64/winlibs-ucrt/: gmp.h  gmp.lib  mpc.lib
msys2/: 32bit.bat  64bit.bat
scripts/: README  before_ci_build.sh  before_ci_build_apple_silicon.sh  cibw_before_all.sh  cibw_before_all_windows.bat  cibw_repair_wheel_command.sh  cibw_repair_wheel_command_windows.bat  cibw_repair_wheel_command_windows.sh  dll-importexport.diff  dll2lib.bat  fat_build_fix.diff  gcc15.diff  mp_bitcnt_t.diff  mpc-pkg-config.diff  patch-arm64.diff  repair_ci_wheel.sh  setup.py  show-cov.sh
src/: gmpy.c  gmpy.h  gmpy.vcproj  gmpy1.c  gmpy2.c  gmpy2.h  gmpy2.pxd  gmpy2_abs.c  gmpy2_abs.h  gmpy2_add.c  gmpy2_add.h  gmpy2_binary.c  gmpy2_binary.h  gmpy2_cache.c  gmpy2_cache.h  gmpy2_cmp.c  gmpy2_cmp.h  gmpy2_const.c  gmpy2_const.h  gmpy2_context.c  gmpy2_context.h  gmpy2_convert.c  gmpy2_convert.h  gmpy2_convert_gmp.c  gmpy2_convert_gmp.h  gmpy2_convert_mpc.c  gmpy2_convert_mpc.h  gmpy2_convert_mpfr.c  gmpy2_convert_mpfr.h  gmpy2_convert_utils.c  gmpy2_convert_utils.h  gmpy2_divmod.c  gmpy2_divmod.h  gmpy2_floordiv.c  gmpy2_floordiv.h  gmpy2_format.c  gmpy2_format.h  gmpy2_fused.c  gmpy2_fused.h  gmpy2_hash.c  (+129 more)
src/gmpy2/: gmpy2.c  gmpy2.h  gmpy2_abs.c  gmpy2_abs.h  gmpy2_add.c  gmpy2_add.h  gmpy2_binary.c  gmpy2_binary.h  gmpy2_cache.c  gmpy2_cache.h  gmpy2_cmp.c  gmpy2_cmp.h  gmpy2_const.c  gmpy2_const.h  gmpy2_context.h  gmpy2_convert.c  gmpy2_convert.h  gmpy2_convert_gmp.h  gmpy2_convert_mpc.h  gmpy2_convert_mpfr.c  gmpy2_convert_mpfr.h  gmpy2_convert_utils.c  gmpy2_convert_utils.h  gmpy2_divmod.c  gmpy2_divmod.h  gmpy2_format.c  gmpy2_format.h  gmpy2_fused.c  gmpy2_fused.h  gmpy2_hash.c  gmpy2_hash.h  gmpy2_macros.h  gmpy2_math.h  gmpy2_minus.c  gmpy2_minus.h  gmpy2_misc.c  gmpy2_misc.h  gmpy2_mod.h  gmpy2_mpc.h  gmpy2_mpc_misc.c  (+51 more)
src/posix64/: jacobi_sum.h  mpz_aprcl.c
tags/gmpy2_2_0_2/: MANIFEST.in
test/: conftest.py  gmpy_test.py  gmpy_test_cvr.py  gmpy_test_dec.py  gmpy_test_mpf.py  gmpy_test_mpq.py  gmpy_test_mpz.py  gmpy_test_rnd.py  gmpy_test_thr.py  gmpy_truediv.py  runtests.py  supportclasses.py  test_abs.txt  test_consts.py  test_context.py  test_context.txt  test_dec.txt  test_functions.py  test_generic.py  test_gmpy2_abs.txt  test_gmpy2_add.txt  test_gmpy2_binary.txt  test_gmpy2_cmp.txt  test_gmpy2_comp.txt  test_gmpy2_const.txt  test_gmpy2_constructors.txt  test_gmpy2_convert.txt  test_gmpy2_convert_gmp.txt  test_gmpy2_divmod.txt  test_gmpy2_floordiv.txt  test_gmpy2_format.txt  test_gmpy2_fused.txt  test_gmpy2_lucas.txt  test_gmpy2_math.txt  test_gmpy2_minus.txt  test_gmpy2_mpfr_misc.txt  test_gmpy2_mpq_misc.txt  test_gmpy2_mpq_misc_py2.txt  test_gmpy2_mpq_misc_py3.txt  test_gmpy2_mpz_bitops.txt  (+52 more)
test2/: gmpy_test.py  gmpy_test_cvr.py  gmpy_test_dec.py  gmpy_test_mpf.py  gmpy_test_mpq.py  gmpy_test_mpz.py  timing1.py
test3/: gmpy_test.py  gmpy_test_cvr.py  gmpy_test_dec.py  gmpy_test_mpf.py  gmpy_test_mpq.py  gmpy_test_mpz.py  gmpy_test_rnd.py  gmpy_test_thr.py  gmpy_test_xmpz.py  test_hash.py  timing2.py  timing3.py
test_cython/: runtests.py  setup_cython.py  test_cython.pyx
trunk/: MANIFEST.in  README  mac_build.txt  msys2_build.txt  setup.py  vs2010_build.txt  win_x64_sdk_build.txt  windows_build.txt
trunk/doc/: gmpydoc.txt  (+1 more)
wiki/: FAQ.wiki  InstallingGMPY2.wiki  InstallingGmpy2.wiki  IntroductionToGmpy.wiki  UsingGmpy2AndMpfr.wiki
(+621 files in other folders)
