[build-system]
requires = ['setuptools>=61']
build-backend = 'setuptools.build_meta'

[project]
name = 'gmpy2'
version = '2.2.0a1'
description = 'gmpy2 interface to GMP, MPFR, and MPC for Python 3.7+'
keywords = ['gmp', 'mpfr', 'mpc', 'multiple-precision',
            'arbitrary-precision', 'precision', 'bignum']
license = {text = 'LGPL-3.0+'}
authors = [{name = 'Case Van Horsen'}]
maintainers = [{name = 'Case Van Horsen', email = 'casevh@gmail.com'}]
classifiers = ['Development Status :: 3 - Alpha',
               'Intended Audience :: Developers',
               'Intended Audience :: Science/Research',
               'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
               'Natural Language :: English',
               'Operating System :: MacOS :: MacOS X',
               'Operating System :: Microsoft :: Windows',
               'Operating System :: POSIX',
               'Programming Language :: C',
               'Programming Language :: Python :: 3',
               'Programming Language :: Python :: 3.7',
               'Programming Language :: Python :: 3.8',
               'Programming Language :: Python :: 3.9',
               'Programming Language :: Python :: 3.10',
               'Programming Language :: Python :: 3.11',
               'Programming Language :: Python :: Implementation :: CPython',
               'Topic :: Scientific/Engineering :: Mathematics',
               'Topic :: Software Development :: Libraries :: Python Modules']
requires-python = '>=3.7'

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[project.optional-dependencies]
docs = ['sphinx>=4', 'sphinx-rtd-theme>=1']
tests = ['pytest', 'hypothesis', 'cython', 'mpmath']

[project.urls]
Homepage = 'https://github.com/aleaxit/gmpy'

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
gmpy2 = ['*.pxd', '*.h', '*.dll', 'vector.py']

[tool.pytest.ini_options]
addopts = "--durations=10"
norecursedirs = ['build', '.eggs', '.git']
xfail_strict = true
